# ECS

./: .gitignore  CMakeLists.txt  CMakePresets.json
ECS/: CMakeLists.txt  ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp  main.cpp
ECS/Components/: Component.hpp  TransformComponent.hpp
